# app/serializers/order_serializer.rb
@@ -1,6 +1,6 @@
 class OrderSerializer < ActiveModel::Serializer
   attributes :id, :total_amount, :status, :payment_method,  
-             :created_at, :updated_at, :can_be_retried, :can_be_refunded, :downloadable
+             :created_at, :updated_at, :can_be_retried, :downloadable
   
   belongs_to :buyer, serializer: UserSerializer
   has_many :payments, serializer: PaymentSerializer
@@ -13,10 +13,6 @@ class OrderSerializer < ActiveModel::Serializer
   
   def can_be_retried
     object.can_be_retried?
-  end
-  
-  def can_be_refunded  
-    object.can_be_refunded?
   end
   
   def downloadable
